--- a/css/style.css
+++ b/css/style.css
@@ -70,25 +70,31 @@ img{
     z-index: 5;
 }
 .main_flower_wrapper{
-	display:grid;
-	grid-template-columns:1fr 1fr;
-	grid-gap:10px;
-	grid-auto-rows:minmax(30vh, auto);
+display: flex;
+    max-height: 730px;
 }
 .main_flower_box_1{
-	display:grid;
-	grid-template-columns:1fr;
-	background-color:yellow;
+width: 50%;
+    display: grid;
+    grid-template-columns: 1fr 40% 60%;
+    background-color: yellow;
+    grid-row: 1/3;
+    grid-template-rows: 60% 40%;
 }
+.main_flower_box_1 .box_1{grid-column: 1/4;}
+.main_flower_box_1 .box_2{    grid-column: 1/3;}
 .main_flower_block_include{
 	display:grid;
-	grid-template-columns:2fr 3fr;	
+	grid-template-columns:2fr 3fr;
+grid-column:1/4	
 }
-.main_flower_block{background-color:green;}
+.main_flower_block{background-color:green;display:grid;grid-column:1/4;grid-row:1/3;grid-auto-rows:minmax(50%, 50%	);	}
 .main_flower_box{background-color:red;}
 .main_flower_box:last-child{background-color:pink;}
-div{border:1px solid black;grid-gap:10px;}
-.main_flower_box_2{display:grid;grid-template-columns:1fr 1fr;}
+
+.main_flower_box_2{display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 50%;}
 .main_flower_box_2 .box_1{background-color:gray;}
 .main_flower_box_2 .box_2{display:grid;grid-template-columns:1fr 1fr;}
 .main_flower_box_2 .box_3{display:grid;grid-column:1/4;}
